# synthetic-user

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  OPERATIONS.md  README.md  architecture.md  architecture2.md  bootstrap.py  pyproject.toml  research-findings.md
.claude/: settings.json
director_mcp/: consult_director_server.py
hooks/: brain_stub.py  post_tool_use_handler.py  pre_tool_use_handler.py  router.py  session_start_handler.py  state.py  stop_handler.py
synthetic_user/: __init__.py  brain.py  config.py  evaluator.py  executor.py  memory.py  orchestrator.py  reports.py  seeder.py  steward.py  triage.py  types.py  utils.py
tests/: test_router_halt_patterns.py  test_scenario_01.py  test_scenario_02.py  test_scenario_03.py  test_scenario_04.py  test_scenario_05.py  test_scenario_06.py  test_scenario_07.py  test_scenario_08.py  test_scenario_09.py  test_scenario_10.py  test_scenario_11.py  test_scenario_12.py  test_scenario_13.py  test_scenario_14.py  test_scenario_15.py
tests/fixtures/: scenario_15_human_verdicts.json
