[project]
name = "synthetic-user"
version = "0.0.1"
description = "Closed-loop synthetic-user control wrapper around Claude Code"
requires-python = ">=3.11"
# The runtime leans on the `claude` CLI (a subprocess), so deps are minimal.
# `mcp` is required: the proactive steering path (consult_director) is a FastMCP
# stdio server, and director_mcp/consult_director_server.py imports it at startup.
dependencies = [
    "mcp>=1.0",
]
# Still deferred until scenarios demand them:
#   - SQLite memory: stdlib (sqlite3)
#   - vector memory: chromadb or faiss  (memory consolidation, §12.4)

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
# Only synthetic_user is an importable package. hooks/ and director_mcp/ are
# invoked by path (via .claude/settings.json and .mcp.json), not imported, so
# they are deliberately excluded from package discovery.
packages = ["synthetic_user"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: tests that invoke a real `claude -p` subprocess (slow, requires CC auth)",
]
